--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ccs-registration-portal",
   "author": "Sanket Mohapatra",
   "organisation": "Student Technical Community, VIT Vellore",
+  "homepage": "http://sanket-mohapatra.me/stc-registration-portal",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,12 +11,13 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "classnames": "^2.2.6",
-    "gh-pages": "^2.2.0",
+    "gh-pages": "^3.1.0",
     "history": "^4.10.1",
     "is-empty": "^1.2.0",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.19",
     "node-sass": "^4.13.1",
+    "querystring": "^0.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
@@ -32,8 +34,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "yarn run build",
-    "deploy": "gh-pages -d build",
-    "start-sw": "http-server ./build"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
