--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ccs-registration-portal",
   "author": "Sanket Mohapatra",
   "organisation": "Student Technical Community, VIT Vellore",
-  "homepage": "http://sanket-mohapatra.me/stc-registration-portal",
+  "homepage": "http://register.stcvit.in",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -14,6 +14,7 @@
     "gh-pages": "^3.1.0",
     "history": "^4.10.1",
     "is-empty": "^1.2.0",
+    "json-duplicate-key-handle": "^1.0.0",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.19",
     "node-sass": "^4.13.1",
